@@ -1,3 +1,8 @@
+2007-10-31  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: also check for audio/x-wma and audio/x-wmv
+	  mimetypes.
+
 2007-10-27  Marcus Meissner  <marcus@jet.franken.de>
 
 	* music-players.h, library.c, Makefile-files:
